# Macro_Dashboard

./: .env.example  .gitignore  LICENSE  README.md  data.db  data.db-journal  database_importer.py  download.py  logging_config.py  main.py  pyproject.toml  request_id.json  resources_rc.py  trial.py  worker_run_source.py
csv/: note.txt
csv/PCE_inflation_Index_m/: PCE_inflation_Index_m.csv
csv/atlanta_gdp_now_q/: atlanta_gdp_now_q.csv
csv/average_wage/: average_wage.csv
csv/bofa_high_yield_index_rate_d/: bofa_high_yield_index_rate_d.csv
csv/bond_yield_spread_d/: bond_yield_spread_d.csv
csv/chicago_fed_fin_condition_index_w/: chicago_fed_fin_condition_index_w.csv
csv/continue_jobless_claims_w/: continue_jobless_claims_w.csv
csv/core_cpi_adj_m/: core_cpi_adj_m.csv
csv/core_cpi_no_adj_m/: core_cpi_no_adj_m.csv
csv/core_ppi_adj_m/: core_ppi_adj_m.csv
csv/eci/: eci.csv
debug/: mock_api.py  trial.py
doc/: API_README.md  README_en.md  code_complexity_test_report.md  data_available.html  structure.md
downloaders/: __init__.py  bea.py  bls.py  cin.py  common.py  dfm.py  em.py  fred.py  fs.py  fw.py  ism.py  multpl.py  naaim.py  nyf.py  te.py  yf.py
gui/: __init__.py  bbg_extract.py  chart_function.py  custom_grip.py  gui_animation.py  i18n_support.py  logging_i18n.py  resources_rc.py  resources_rc.qrc  resources_rc_rc.py  settings.json  signal_function.py  table_function.py  ui_function.py  ui_main.py  ui_main.ui  ui_main_ui.py  ui_mainwindow.py  ui_prestart_window.py
note/: User_instructions.txt
tools/: _list_tr_keys.py  generate_md_docs.py
(+96 files in other folders)
