[project]
name = "proj"
version = "0.6.00_alpha"
dependencies = [
    "beaapi>=0.1.0",
    "bs4>=0.0.2",
    "curl-cffi==0.10.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.1",
    "selenium>=4.34.2",
    "cffi == 1.17.1",
    "certifi>=2025.7.14",
    "yfinance>=0.2.65",
    "lxml>=6.0.0",
    "pyside6>=6.9.1",
]
