[project]
name = "proj"
version = "0.6.00_alpha"
dependencies = [
    "beaapi>=0.1.0",
    "bs4>=0.0.2",
    "curl-cffi==0.10.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.1",
    "selenium>=4.34.2",
    "cffi == 1.17.1",
    "certifi>=2025.7.14",
    "yfinance>=0.2.65",
    "lxml>=6.0.0",
    "pyside6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "python-dateutil>=2.9.0",
    "pandas-stubs==2.3.2.250827",
]
